--- a/project/loja/templates/loja/inicio.html
+++ b/project/loja/templates/loja/inicio.html
@@ -9,9 +9,11 @@
 <body>
 
 
-    <h1>
+    <h3>
         Bem vindo a lista de compras!
-    </h1>
+        <br>
+        cadastra-se para adidiconar produtos e listas!
+    </h3>
     <button>
         <a href="logar">login</a>
         
