--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -51,6 +51,16 @@
 	                cursor: pointer;
 	                margin: 0 5px;
 	            }
-    </style>
+
+   </style>
+
+   <style>
+
+    img {
+    display: block;
+    margin: 20px auto;
+    width: 100px;
+}
+   </style>
    
 {% endblock %}
