--- a/project/app/templates/app/pag.html
+++ b/project/app/templates/app/pag.html
@@ -10,4 +10,58 @@
     </ul>
     <a href="{% url 'index' %}">Pagina inicial</a>
 
+
+    <style>
+        /* Define as cores padrão da página */
+
+body {
+  background-color: #f5f5f5;
+  color: #333;
+  font-family: Arial, sans-serif;
+}
+
+/* Estilo para o título da página */
+
+h1 {
+  font-size: 2em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* Estilo para a lista de compras */
+
+ul {
+  list-style: none;
+  margin: 0 auto;
+  max-width: 400px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+ul li {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+
+/* Estilo para o link de volta para a página inicial */
+
+a {
+  display: block;
+  margin-top: 20px;
+  text-align: center;
+  text-decoration: none;
+  color: #333;
+  font-size: 1.2em;
+}
+
+a:hover {
+  color: #4af3bb;
+}
+        
+        
+        
+    </style>
 {% endblock %}
